{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 24,
  "lineage": "7c82b3bf-f34f-fbb3-480f-5dcb438a3480",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "data",
      "type": "aws_subnet",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:subnet/subnet-00699fc3a0fcec6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "available_ip_address_count": 251,
            "cidr_block": "10.0.101.0/24",
            "default_for_az": false,
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00699fc3a0fcec6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889455047494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "state": "available",
            "tags": {
              "Name": "test-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0de8f6a2a6d5f4b3c",
            "arn": "arn:aws:ec2:eu-central-1:889455047494:instance/i-0f43a10ed996eb2d0",
            "associate_public_ip_address": false,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f43a10ed996eb2d0",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0503756a4beb446af"
              }
            ],
            "primary_network_interface_id": "eni-0503756a4beb446af",
            "private_dns": "ip-10-0-101-215.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.101.215",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-016e5e78b28e9a269",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00699fc3a0fcec6c3",
            "tags": {
              "Name": "test-instance"
            },
            "tags_all": {
              "Name": "test-instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "volume_tags": {
              "Name": "test-instance"
            },
            "vpc_security_group_ids": [
              "sg-02e89fba179b74d5b"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "i-0f43a10ed996eb2d0",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_iam_instance_profile.this",
            "module.ec2_instance.aws_iam_role.this",
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_iam_policy_document.assume_role_policy",
            "module.ec2_instance.data.aws_partition.current",
            "module.ec2_instance.data.aws_ssm_parameter.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:security-group/sg-02e89fba179b74d5b",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02e89fba179b74d5b",
            "ingress": [],
            "name": "test-instance-7219ba31092e15605cf720d0b5",
            "name_prefix": "test-instance-",
            "owner_id": "889455047494",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-instance"
            },
            "tags_all": {
              "Name": "test-instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "sg-02e89fba179b74d5b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ipv4_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:security-group-rule/sgr-0b63dbc238df58382",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all IPv4 traffic",
            "from_port": null,
            "id": "sgr-0b63dbc238df58382",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-02e89fba179b74d5b",
            "security_group_rule_id": "sgr-0b63dbc238df58382",
            "tags": {
              "Name": "test-instance-ipv4_default"
            },
            "tags_all": {
              "Name": "test-instance-ipv4_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "sgr-0b63dbc238df58382",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": "ipv6_default",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:security-group-rule/sgr-0af602b8b4d355f96",
            "cidr_ipv4": null,
            "cidr_ipv6": "::/0",
            "description": "Allow all IPv6 traffic",
            "from_port": null,
            "id": "sgr-0af602b8b4d355f96",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-02e89fba179b74d5b",
            "security_group_rule_id": "sgr-0af602b8b4d355f96",
            "tags": {
              "Name": "test-instance-ipv6_default"
            },
            "tags_all": {
              "Name": "test-instance-ipv6_default"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "sgr-0af602b8b4d355f96",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.ec2_instance.aws_security_group.this",
            "module.ec2_instance.data.aws_subnet.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:network-acl/acl-0fc0eb27332e3005c",
            "default_network_acl_id": "acl-0fc0eb27332e3005c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0fc0eb27332e3005c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "889455047494",
            "region": "eu-central-1",
            "subnet_ids": [
              "subnet-00699fc3a0fcec6c3",
              "subnet-042fff354750b45bd",
              "subnet-0ab4ed235de08d110",
              "subnet-0d81a744e48958d0c"
            ],
            "tags": {
              "Name": "test-vpc-default"
            },
            "tags_all": {
              "Name": "test-vpc-default"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:route-table/rtb-026f9aaf4a45f2565",
            "default_route_table_id": "rtb-026f9aaf4a45f2565",
            "id": "rtb-026f9aaf4a45f2565",
            "owner_id": "889455047494",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "test-vpc-default"
            },
            "tags_all": {
              "Name": "test-vpc-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:security-group/sg-014e7d837476d18bb",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-014e7d837476d18bb",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "889455047494",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-vpc-default"
            },
            "tags_all": {
              "Name": "test-vpc-default"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:internet-gateway/igw-01164ec2fb2ad0c7b",
            "id": "igw-01164ec2fb2ad0c7b",
            "owner_id": "889455047494",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "igw-01164ec2fb2ad0c7b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01164ec2fb2ad0c7b",
            "id": "r-rtb-004979790655119521080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "odb_network_arn": "",
            "origin": "CreateRoute",
            "region": "eu-central-1",
            "route_table_id": "rtb-00497979065511952",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "eu-central-1",
            "route_table_id": "rtb-00497979065511952"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:route-table/rtb-0d3419c5225eaff9a",
            "id": "rtb-0d3419c5225eaff9a",
            "owner_id": "889455047494",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "test-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "test-vpc-private-eu-central-1a"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtb-0d3419c5225eaff9a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:route-table/rtb-0af11c144c877ae58",
            "id": "rtb-0af11c144c877ae58",
            "owner_id": "889455047494",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [],
            "tags": {
              "Name": "test-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "test-vpc-private-eu-central-1b"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtb-0af11c144c877ae58",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:route-table/rtb-00497979065511952",
            "id": "rtb-00497979065511952",
            "owner_id": "889455047494",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01164ec2fb2ad0c7b",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "test-vpc-public"
            },
            "tags_all": {
              "Name": "test-vpc-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtb-00497979065511952",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdb55ad5b9aa1b8b",
            "region": "eu-central-1",
            "route_table_id": "rtb-0d3419c5225eaff9a",
            "subnet_id": "subnet-0d81a744e48958d0c"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtbassoc-0bdb55ad5b9aa1b8b",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06f0681a3a690807a",
            "region": "eu-central-1",
            "route_table_id": "rtb-0af11c144c877ae58",
            "subnet_id": "subnet-0ab4ed235de08d110"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtbassoc-06f0681a3a690807a",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08da99432ab055388",
            "region": "eu-central-1",
            "route_table_id": "rtb-00497979065511952",
            "subnet_id": "subnet-00699fc3a0fcec6c3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtbassoc-08da99432ab055388",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03fcf0da660d22246",
            "region": "eu-central-1",
            "route_table_id": "rtb-00497979065511952",
            "subnet_id": "subnet-042fff354750b45bd"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "rtbassoc-03fcf0da660d22246",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:subnet/subnet-0d81a744e48958d0c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d81a744e48958d0c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889455047494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc-private-eu-central-1a"
            },
            "tags_all": {
              "Name": "test-vpc-private-eu-central-1a"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "subnet-0d81a744e48958d0c",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:subnet/subnet-0ab4ed235de08d110",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ab4ed235de08d110",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889455047494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc-private-eu-central-1b"
            },
            "tags_all": {
              "Name": "test-vpc-private-eu-central-1b"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "subnet-0ab4ed235de08d110",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:subnet/subnet-00699fc3a0fcec6c3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00699fc3a0fcec6c3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889455047494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc-public-eu-central-1a"
            },
            "tags_all": {
              "Name": "test-vpc-public-eu-central-1a"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "subnet-00699fc3a0fcec6c3",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:subnet/subnet-042fff354750b45bd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-042fff354750b45bd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "889455047494",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc-public-eu-central-1b"
            },
            "tags_all": {
              "Name": "test-vpc-public-eu-central-1b"
            },
            "vpc_id": "vpc-0f02fb5257aaa7074"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "subnet-042fff354750b45bd",
            "region": "eu-central-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:889455047494:vpc/vpc-0f02fb5257aaa7074",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0fc0eb27332e3005c",
            "default_route_table_id": "rtb-026f9aaf4a45f2565",
            "default_security_group_id": "sg-014e7d837476d18bb",
            "dhcp_options_id": "dopt-03014c8ba4a6ab835",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f02fb5257aaa7074",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-026f9aaf4a45f2565",
            "owner_id": "889455047494",
            "region": "eu-central-1",
            "tags": {
              "Name": "test-vpc"
            },
            "tags_all": {
              "Name": "test-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "889455047494",
            "id": "vpc-0f02fb5257aaa7074",
            "region": "eu-central-1"
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}